--- a/index.html
+++ b/index.html
@@ -7,25 +7,27 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="apple-touch-icon" href="apple-touch-icon.png">
-	<!-- Place favicon.ico in the root directory -->
 	<link rel="stylesheet" href="/css/normalize.min.css">
+	<link rel="stylesheet" href="/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/css/main.min.css">
 	<script src="/js/vendor/modernizr-2.8.3.min.js"></script>
-	
-	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 	<script>
-		(function ( b, o, i, l, e, r ) {
-			b.GoogleAnalyticsObject = l;
-			b[ l ] || (b[ l ] =
-				function () {(b[ l ].q = b[ l ].q || []).push( arguments )});
-			b[ l ].l = +new Date;
-			e        = o.createElement( i );
-			r        = o.getElementsByTagName( i )[ 0 ];
-			e.src    = 'https://www.google-analytics.com/analytics.js';
-			r.parentNode.insertBefore( e, r )
-		}( window, document, 'script', 'ga' ));
-		ga( 'create', 'UA-XXXXX-X', 'auto' );
-		ga( 'send', 'pageview' );
+		(function ( i, s, o, g, r, a, m ) {
+			i[ 'GoogleAnalyticsObject' ] = r;
+			i[ r ] = i[ r ] || function () {
+					(i[ r ].q = i[ r ].q || []).push( arguments )
+				}, i[ r ].l = 1 * new Date();
+			a = s.createElement( o ),
+				m = s.getElementsByTagName( o )[ 0 ];
+			a.async = 1;
+			a.src   = g;
+			m.parentNode.insertBefore( a, m )
+		})( window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga' );
+		
+		if ( !/(.+\.dev$|localhost.*$)/.test( window.location.host ) ) {
+			ga( 'create', 'UA-96091150-1', 'auto' );
+			ga( 'send', 'pageview' );
+		}
 	</script>
 </head>
 <body>
@@ -36,20 +38,22 @@
 </p>
 <![endif]-->
 
-<main class="dark-overlay">
-	<div class="bg-img">
-		<nav class="top-left">
-			<p>Logo</p>
-		</nav>
-		<section class="coming-soon">
-			<h1 class="mb-1-em">COMING SOON</h1>
-			<hr class="hr">
-			<p id="countdown-display">May 1, 2017</p>
-		</section>
-		<footer class="bottom-left">
-			<p>Some text</p>
-		</footer>
-	</div>
+<main class="main lato bg-img">
+	<nav class="top-left">
+		<img class="logo" src="/img/emily-ruth-logo-concept-black.svg" alt="Emily Ruth Coach">
+	</nav>
+	<section class="coming-soon">
+		<h1 class="mb-1-em">COMING SOON</h1>
+		<hr class="hr">
+		<p id="countdown-display">May 1, 2017</p>
+	</section>
+	<footer class="bottom-left">
+		<p class="footer-text">
+			<a class="btn btn-primary btn-sharp" data-email-me href="mailto:emilyruthmcintosh@gmail.com">
+				Email Me
+			</a>
+		</p>
+	</footer>
 </main>
 
 <script src="/js/vendor/jquery-3.2.0.slim.min.js"></script>
