--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
 	<link rel="stylesheet" href="/css/normalize.min.css">
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/css/main.min.css">
+	<!-- FAVICONS -->
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+	<link rel="manifest" href="/manifest.json">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="theme-color" content="#ffffff">
+	<!-- FAVICONS -->
 	<script src="/js/vendor/modernizr-2.8.3.min.js"></script>
 	<script>
-		(function ( i, s, o, g, r, a, m ) {
-			i[ 'GoogleAnalyticsObject' ] = r;
-			i[ r ] = i[ r ] || function () {
-					(i[ r ].q = i[ r ].q || []).push( arguments )
-				}, i[ r ].l = 1 * new Date();
-			a = s.createElement( o ),
-				m = s.getElementsByTagName( o )[ 0 ];
-			a.async = 1;
-			a.src   = g;
-			m.parentNode.insertBefore( a, m )
-		})( window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga' );
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 		
 		if ( !/(.+\.dev$|localhost.*$)/.test( window.location.host ) ) {
 			ga( 'create', 'UA-96091150-1', 'auto' );
