--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title></title>
-	<meta name="description" content="">
+	<title>Emily Ruth | Coming Soon</title>
+	<!-- Meta Content -->
+	<meta name="description" content="Find yourself, love your body, reclaim your life.">
+	<!-- Open Graph -->
+	<meta property="og:title" content="Emily Ruth: Coming Soon">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="http://emilyruthcoach.com">
+	<meta property="og:description" content="Find yourself, love your body, reclaim your life.">
+	<meta property="og:image" content="http://emilyruthcoach.com/img/og-image.jpg">
+	<meta property="og:image:type" content="image/jpeg">
+	<meta property="og:image:width" content="2500">
+	<meta property="og:image:height" content="1667">
+	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="apple-touch-icon" href="apple-touch-icon.png">
 	<link rel="stylesheet" href="/css/normalize.min.css">
@@ -20,10 +31,17 @@
 	<!-- FAVICONS -->
 	<script src="/js/vendor/modernizr-2.8.3.min.js"></script>
 	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+		(function ( i, s, o, g, r, a, m ) {
+			i[ 'GoogleAnalyticsObject' ] = r;
+			i[ r ] = i[ r ] || function () {
+					(i[ r ].q = i[ r ].q || []).push( arguments )
+				}, i[ r ].l = 1 * new Date();
+			a = s.createElement( o ),
+				m = s.getElementsByTagName( o )[ 0 ];
+			a.async = 1;
+			a.src   = g;
+			m.parentNode.insertBefore( a, m )
+		})( window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga' );
 		
 		if ( !/(.+\.dev$|localhost.*$)/.test( window.location.host ) ) {
 			ga( 'create', 'UA-96091150-1', 'auto' );
