add optimized bg img

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	</section>
 	<footer class="bottom-left">
 		<p class="footer-text">
-			<a class="btn btn-primary btn-sharp" data-email-me href="mailto:emilyruthmcintosh@gmail.com">
+			<a class="btn btn-primary btn-sharp" data-email-me href="mailto:hello@emilyruthcoach.com">
 				Email Me
 			</a>
 		</p>
