added Revive retreat link

--- a/index.html
+++ b/index.html
@@ -1,82 +1,97 @@
 <!DOCTYPE html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en-us">
+
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>Emily Ruth | Coming Soon</title>
-	<!-- Meta Content -->
-	<meta name="description" content="Find yourself, love your body, reclaim your life.">
-	<!-- Open Graph -->
-	<meta property="og:title" content="Emily Ruth: Coming Soon">
-	<meta property="og:type" content="website">
-	<meta property="og:url" content="http://emilyruthcoach.com">
-	<meta property="og:description" content="Find yourself, love your body, reclaim your life.">
-	<meta property="og:image" content="http://emilyruthcoach.com/img/og-image.jpg">
-	<meta property="og:image:type" content="image/jpeg">
-	<meta property="og:image:width" content="2500">
-	<meta property="og:image:height" content="1667">
-	
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="apple-touch-icon" href="apple-touch-icon.png">
-	<link rel="stylesheet" href="/css/normalize.min.css">
-	<link rel="stylesheet" href="/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/css/main.min.css">
-	<!-- FAVICONS -->
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-	<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-	<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-	<link rel="manifest" href="/manifest.json">
-	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-	<meta name="theme-color" content="#ffffff">
-	<!-- FAVICONS -->
-	<script src="/js/vendor/modernizr-2.8.3.min.js"></script>
-	<script>
-		(function ( i, s, o, g, r, a, m ) {
-			i[ 'GoogleAnalyticsObject' ] = r;
-			i[ r ] = i[ r ] || function () {
-					(i[ r ].q = i[ r ].q || []).push( arguments )
-				}, i[ r ].l = 1 * new Date();
-			a = s.createElement( o ),
-				m = s.getElementsByTagName( o )[ 0 ];
-			a.async = 1;
-			a.src   = g;
-			m.parentNode.insertBefore( a, m )
-		})( window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga' );
-		
-		if ( !/(.+\.dev$|localhost.*$)/.test( window.location.host ) ) {
-			ga( 'create', 'UA-96091150-1', 'auto' );
-			ga( 'send', 'pageview' );
-		}
-	</script>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Emily Ruth | Coming Soon</title>
+    <!-- Meta Content -->
+    <meta name="description" content="Find yourself, love your body, reclaim your life.">
+    <!-- Open Graph -->
+    <meta property="og:title" content="Emily Ruth: Coming Soon">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://emilyruthcoach.com">
+    <meta property="og:description" content="Find yourself, love your body, reclaim your life.">
+    <meta property="og:image" content="http://emilyruthcoach.com/img/og-image.jpg">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="2500">
+    <meta property="og:image:height" content="1667">
+    <!-- Styles -->
+    <link rel="stylesheet" href="/css/normalize.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/main.min.css">
+    <!-- FAVICONS -->
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="theme-color" content="#ffffff">
+    <!-- Polyfills, Analytics -->
+    <script src="/js/vendor/modernizr-2.8.3.min.js"></script>
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+        if (!/(.+\.dev$|127\.0\.0\.1.*$|localhost.*$)/.test(window.location.host)) {
+            ga('create', 'UA-96091150-1', 'auto');
+            ga('send', 'pageview');
+        }
+    </script>
 </head>
+
 <body>
-<!--[if lt IE 8]>
+    <!--[if lt IE 8]>
 <p class="browser-upgrade">
 	You are using an <strong>outdated</strong> browser.
 	Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
 </p>
 <![endif]-->
 
-<main class="main lato bg-img">
-	<nav class="top-left">
-		<img class="logo" src="/img/emily-ruth-logo-concept-black.svg" alt="Emily Ruth Coach">
-	</nav>
-	<section class="coming-soon">
-		<h1 class="mb-1-em">COMING SOON</h1>
-		<hr class="hr">
-		<p id="countdown-display">May 1, 2017</p>
-	</section>
-	<footer class="bottom-left">
-		<p class="footer-text">
-			<a class="btn btn-primary btn-sharp" data-email-me href="mailto:hello@emilyruthcoach.com">
+    <main class="main lato bg-img">
+        <nav class="navbar">
+            <!--<div class="top-left">-->
+            <div class="nav-left">
+                <img class="logo" src="/img/emily-ruth-logo-concept-black.svg" alt="Emily Ruth Coach">
+            </div>
+            <!--<div class="top-right">-->
+            <!--<div class="nav-right">
+			<a class="btn btn-primary btn-sharp" href="https://emilyruthcoach.wixsite.com/revive-retreat" target="_blank">Retreat</a>
+		</div>-->
+        </nav>
+        <section class="coming-soon">
+            <h1 class="mb-1-em">COMING SOON</h1>
+            <hr class="hr">
+            <p id="countdown-display">May 1, 2017</p>
+            <p class="text-sm">
+                Check out my upcoming
+                <a href="https://emilyruthcoach.wixsite.com/revive-retreat" target="_blank"><strong>Revive Retreat</strong></a>!
+            </p>
+        </section>
+        <footer class="bottom-left">
+            <p class="footer-text">
+                <a class="btn btn-primary btn-sharp" data-email-me href="mailto:hello@emilyruthcoach.com">
 				Email Me
 			</a>
-		</p>
-	</footer>
-</main>
+            </p>
+        </footer>
+    </main>
 
-<script src="/js/vendor/jquery-3.2.0.slim.min.js"></script>
-<script src="/js/plugins.js"></script>
-<script src="/dist/js/main.js"></script>
+    <script src="/js/vendor/jquery-3.2.0.slim.min.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/dist/js/main.js"></script>
 </body>
+
 </html>
